--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@grpc/grpc-js": "^1.9.9",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
+    "protoc-gen-js": "^3.21.2",
+    "ts-node": "^10.9.1",
+    "ts-proto": "^1.164.0",
     "tsconfig": "workspace:*",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.6.10",
   "name": "monorepo-next-grpc"
